# ml-assignment

./: .dockerignore  .gitignore  .pre-commit.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  setup.cfg  tox.ini
app/: config.py  storage.py  translation_example.py
deploy/: deployment.yaml
k8s/: minio-dev.yaml
modules/: app.py  config.py  inference.py  storage.py  translation_example.py
tests/: conftest.py  test_app.py  test_config.py  test_storage.py
