[metadata]
name = translation_example
description = CTW ML Assignment
author = Gustavo A. Barrios M.
author_email = gustavoantonio51@gmail.com
license = MIT
platforms = unix
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = 
    huggingface-hub>=0.11.0
    torch>=1.13.0
    transformers>=4.24.0
    python-dotenv>=0.21.0
    pydantic>=1.10.2
    minio>=7.1.12
    fastapi>=0.87.0
    uvicorn>=0.20.0
python_requires = >=3.10
include_package_data = True
zip_safe = False
package_dir =
    =.

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    pre-commit>=2.7

[options.package_data]
app = py.typed

[flake8]
ignore = E302,E402,F403,E265,E201,E124,E202,E123,E731,F405,W503,E211,W605
max-line-length = 120
exclude = tests/*
max-complexity=15
